# lssa2025i

./: .gitignore  README.md
.github/workflows/: delivery-action.yml
1018486757/: config.py
laboratories/laboratory_1/: 1000216265.md  1000381967.md  1000790737.md  1001193487.md  1001326848.md  1002971628.md  1010117386.md  1015994056  1015994056.md  1018486757.md  1019142922.md  1019147265.md  1020814023.md  1021665025.md  1022408160.md  1023949483.md  1023971246.md  1024507506.md  1030617365.md  1065833411.md  1072026839.md  1075684546.md  1143825130.md  1193460003.md  52363149.md  79795385.md  79817391.md  Laboratorio1.md  (+1 more)
laboratories/laboratory_3/1019142922/: .gitignore  README.md  pyproject.toml
laboratories/laboratory_3/1019142922/examples/: model.arch
laboratories/laboratory_3/1019142922/src/architecture_generator/: arch.tx  cli.py  metamodel.py  transformations.py
laboratories/laboratory_3/1019142922/src/architecture_generator/templates/api_gateway/: Dockerfile.jinja2  main.py.jinja2  pyproject.toml.jinja2
laboratories/laboratory_3/1019142922/src/architecture_generator/templates/backend/: Dockerfile.jinja2  README.md.jinja2  main.py.jinja2  pyproject.toml.jinja2
laboratories/laboratory_3/1019142922/src/architecture_generator/templates/database/: README.md.jinja2  init.sql.jinja2
laboratories/laboratory_3/1019142922/src/architecture_generator/templates/docker-compose/: docker-compose.yml.jinja2
laboratories/laboratory_3/1019142922/src/architecture_generator/templates/frontend/: Dockerfile.jinja2  app.js.jinja2  index.html.jinja2  styles.css.jinja2
(+1140 files in other folders)
